[package]
name = "msrv"
version = "0.1.0"
authors = ["Navin <navinds25@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.5.0"
gflags = "0.3.8"
serde = "1.0.125"
serde_json = "1.0.64"
confy = "0.4.0"